tests/baselines/reference/project/declarationsMultipleTimesMultipleImport/node/declarationsMultipleTimesMultipleImport.errors.txt
useModule.ts(6,15): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== m4.ts (0 errors) ====
    export class d {
    };
    export var x: d;
    export function foo() {
        return new d();
    }
    
==== m5.ts (0 errors) ====
    import m4 = require("m4"); // Emit used
    export function foo2() {
        return new m4.d();
    }
==== useModule.ts (1 errors) ====
    import m4 = require("m4"); // Emit used
    export var x4 = m4.x;
    export var d4 = m4.d;
    export var f4 = m4.foo();
    
    export module m1 {
                  ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export var x2 = m4.x;
        export var d2 = m4.d;
        export var f2 = m4.foo();
    
        var x3 = m4.x;
        var d3 = m4.d;
        var f3 = m4.foo();
    }
    
    // Do not emit unused import
    import m5 = require("m5");
    export var d = m5.foo2();